--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         body, html {
             margin: 0;
             padding: 0;
+            font-family: "Times New Roman", Times, serif;
         }
-        header{
+        header {
             width: 97.3%;
             padding: 20px;
             display: flex;
@@ -17,12 +18,19 @@
             font-size: 24px;
             border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
         nav a {
-            margin: 30px;
+            margin: 10px 40px;
             text-decoration: none;
             color: #000000;
+            display: flex;
+            align-items: center;
         }
-        nav a span{
+        nav a span {
             position: relative;
             top: -1px;
         }
@@ -31,23 +39,39 @@
             cursor: pointer; 
             margin-right: 10px;
         }
-        #about{
-            margin-left: 310px;
-            width: 60%;
-            font-family: "Times New Roman", Times, serif;
+        #about {
+            margin: 0 auto;
+            padding: 20px;
+            width: 90%;
+            max-width: 900px;
         }
-        #Title{
+        #Title {
             margin-top: 50px;
             font-size: 32px;
         }
-        #Body{
+        #Body {
             font-size: 24px;
         }
         #howto {
             margin-top: 20px;
-            width: 900px;
-            height: 450px;
+            width: 100%;
+            height: auto;
+            max-width: 900px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        @media (max-width: 600px) {
+            header {
+                font-size: 20px;
+            }
+            nav a {
+                margin: 5px 20px;
+            }
+            #Title {
+                font-size: 28px;
+            }
+            #Body {
+                font-size: 18px;
+            }
         }
     </style>
 </head>
@@ -56,31 +80,31 @@
         <nav>
             <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
             <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
-            <a href="ViewPost.html"><img src = "View.png" loading="lazy"><span>View</span></a>
-            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
+            <a href="ViewPost.html"><img src="View.png" loading="lazy"><span>View</span></a>
+            <a href="Account.html"><img src="Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
-    <div style = "margin: 110px;"></div>
-    <div id = "about">
-    <p id = "Title">About AnimeBlog</p>
-    <p id = "Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.
-        This site is a work in progress. If you have any suggestions or come across any bugs please 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contactanimeblog@gmail.com" target="_blank">send me an email.</a></p>
-    <p id = "Title">How to use AnimeBlog</p>
-    <img id = "howto" src="HowTo1.png">
-    <p id = "Body">By clicking the Account tab, you can either make a new account by entering an unregistered username and making a password
-        or log in to an existing one by entering a registered username and it's associated password.</p>
-    <img id = "howto" src="HowTo2.png">
-    <p id = "Body">By clicking the Create tab once the Account tab shows you have logged in, you can make a post by typing out a title and a body.
-        Once the post is finished, you'll automatically navigate tab where you can view your post by clicking the item with its information as well 
-        as posts others have made. You can also delete posts you have made back in the Account tab by pressing the trash button.</p>
-    <img id = "howto" src="HowTo3.png">
-    <p id = "Body">While viewing a post, you can either download it as a multi-page PDF by clicking the download button or read it online.
-        You can also generate a MLA citation by clicking the cite paper button.</p>
-    <p id = "Title">What to Post</p>
-    <p id = "Body">Only post formal literary analyses on anime, manga, lns or vns. Don't post plagiarized or unoriginal content. 
-        Anything posted in violation of these rules is subject to deletion at our discretion.</p>
+    <div style="margin: 40px;"></div>
+    <div id="about">
+        <p id="Title">About AnimeBlog</p>
+        <p id="Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.
+            This site is a work in progress. If you have any suggestions or come across any bugs please 
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contactanimeblog@gmail.com" target="_blank">send me an email.</a></p>
+        <p id="Title">How to use AnimeBlog</p>
+        <img id="howto" src="HowTo1.png" alt="How to use AnimeBlog step 1">
+        <p id="Body">By clicking the Account tab, you can either make a new account by entering an unregistered username and making a password
+            or log in to an existing one by entering a registered username and it's associated password.</p>
+        <img id="howto" src="HowTo2.png" alt="How to use AnimeBlog step 2">
+        <p id="Body">By clicking the Create tab once the Account tab shows you have logged in, you can make a post by typing out a title and a body.
+            Once the post is finished, you'll automatically navigate tab where you can view your post by clicking the item with its information as well 
+            as posts others have made. You can also delete posts you have made back in the Account tab by pressing the trash button.</p>
+        <img id="howto" src="HowTo3.png" alt="How to use AnimeBlog step 3">
+        <p id="Body">While viewing a post, you can either download it as a multi-page PDF by clicking the download button or read it online.
+            You can also generate a MLA citation by clicking the cite paper button.</p>
+        <p id="Title">What to Post</p>
+        <p id="Body">Only post formal literary analyses on anime, manga, lns or vns. Don't post plagiarized content. 
+            Anything posted in violation of these rules is subject to deletion at my discretion.</p>
     </div>
-    <div style = "margin: 100px;"></div>
+    <div style="margin: 100px;"></div>
 </body>
 </html>
