--- a/Account.html
+++ b/Account.html
@@ -8,8 +8,9 @@
         body, html {
             margin: 0;
             padding: 0;
+            font-family: "Times New Roman", Times, serif;
         }
-        header{
+        header {
             width: 97.3%;
             padding: 20px;
             display: flex;
@@ -17,12 +18,19 @@
             font-size: 24px;
             border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
         nav a {
-            margin: 30px;
+            margin: 10px 40px;
             text-decoration: none;
             color: #000000;
+            display: flex;
+            align-items: center;
         }
-        nav a span{
+        nav a span {
             position: relative;
             top: -1px;
         }
@@ -31,30 +39,34 @@
             cursor: pointer; 
             margin-right: 10px;
         }
-        button{
+        button {
             font-family: "Times New Roman", Times, serif;
             margin-top: 42px;
             margin-bottom: 42px;
-            margin-left: 310px;
+            margin-left: 20%;
+            width: 10%;
+            max-width: 900px;
             background-color: white;
             border-radius: 10px;
-            border-width: 1px;
+            border: 1px solid rgba(132, 132, 132, 0.5);
             font-size: 16px;
         }
-        input{
+        input {
             font-family: "Times New Roman", Times, serif;
             padding: 10px;
-            margin-left: 300px;
+            margin-left: 20%;
             margin-bottom: 10px;
             font-size: 32px;
             border: none;
             outline: none;
-            width: 900px;
+            width: 80%;
+            max-width: 900px;
         }
-        #CurrentLogin{
+        #CurrentLogin {
             font-family: "Times New Roman", Times, serif;
             font-size: 24px;
-            margin-left: 310px;
+            margin-left: 20%;
+            width: 80%;
         }
         button:hover {
             background-color: #f0f0f0; 
@@ -63,8 +75,9 @@
             background-color: #848484; 
         }
         p {
-            margin-left: 310px;
+            margin-left: 20%;
             font-size: 24px;
+            width: 80%;
         }
         .post-item {
             display: flex;
@@ -72,8 +85,9 @@
             justify-content: space-between; 
             align-items: flex-start;
             margin-top: 50px;
-            margin-left: 310px;
-            width: 900px;
+            margin-left: 20%;
+            width: 80%;
+            max-width: 900px;
             font-family: "Times New Roman", Times, serif;
             margin-bottom: 20px;
             padding-bottom: 10px;
@@ -97,17 +111,62 @@
             align-items: center;
             justify-content: center;
             width: 40px; 
-            margin-left: 850px;
+            margin-left: 90%;
             margin-top: 17px;
         }
-        .post-item:hover{
+        .post-item:hover {
             background-color: #f0f0f0;
         }
-        img{
+        img {
             height: 40px; 
             cursor: pointer; 
         }
-    </style>
+        .button-container {
+            margin-left: 20%;
+            display: flex;
+        }
+        @media (max-width: 600px) {
+            header {
+                font-size: 20px;
+            }
+            nav a {
+                margin: 5px 20px; 
+            }
+            button {
+                font-size: 14px;
+                margin-left: 5%;
+                width: 90%;
+            }
+            input {
+                font-size: 24px;
+                margin-left: 5%;
+                width: 90%;
+            }
+            #CurrentLogin {
+                font-size: 20px;
+                margin-left: 5%;
+                width: 90%;
+            }
+            p {
+                font-size: 20px;
+                margin-left: 5%;
+                width: 90%;
+            }
+            .post-item {
+                margin-left: 5%;
+                width: 90%;
+            }
+            .post-title {
+                font-size: 24px;
+            }
+            .post-author-date {
+                font-size: 18px;
+            }
+            .post-button {
+                margin-left: auto;
+            }
+        }
+    </style>    
 </head>
 <body>
     <header>
