--- a/Post.html
+++ b/Post.html
@@ -6,12 +6,32 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <title>Post</title>
     <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: "Times New Roman", Times, serif;
+        }
+        header {
+            width: 97.3%;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            font-size: 24px;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
+        }
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
         nav a {
-            margin: 30px;
+            margin: 10px 40px;
             text-decoration: none;
             color: #000000;
+            display: flex;
+            align-items: center;
         }
-        nav a span{
+        nav a span {
             position: relative;
             top: -1px;
         }
@@ -20,42 +40,32 @@
             cursor: pointer; 
             margin-right: 10px;
         }
-        header{
-            width: 97.3%;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            font-size: 24px;
-            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
+        p {
+            margin-left: 20%;
+            width: 80%;
+            max-width: 900px;
         }
-        p{
-            font-family: "Times New Roman", Times, serif;
-            margin-left: 310px;
-            width: 900px;
-        }
-        body, html {
-            margin: 0;
-            padding: 0;
-        }
-        #postTitle{
+        #postTitle {
             font-size: 32px;
         }
-        #postInfo{
+        #postInfo {
             font-size: 20px;
         }
-        #postContent{
+        #postContent {
             font-size: 24px;
             white-space: pre-wrap;
         }
-        button{
+        button {
             font-family: "Times New Roman", Times, serif;
             margin-top: 42px;
             margin-bottom: 15px;
-            margin-left: 310px;
+            margin-left: 20%;
+            width: 10%;
+            max-width: 900px;
             background-color: white;
             border-radius: 10px;
-            border-width: 1px;
             font-size: 16px;
+            border: 1px solid rgba(132, 132, 132, 0.5);
         }
         button:hover {
             background-color: #f0f0f0; 
@@ -63,10 +73,30 @@
         button:active {
             background-color: #848484; 
         }
-        #citeButton{
+        #citeButton {
             margin-left: 20px;
         }
-    </style>
+        @media (max-width: 600px) {
+            header {
+                font-size: 20px;
+            }
+            nav a {
+                margin: 5px 20px; 
+            }
+            #postTitle {
+                font-size: 24px;
+            }
+            #postInfo {
+                font-size: 18px;
+            }
+            #postContent {
+                font-size: 20px;
+            }
+            button {
+                font-size: 14px;
+            }
+        }
+    </style>    
 </head>
 <body>
     <header>
