--- a/ViewPost.html
+++ b/ViewPost.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post List</title>
     <style>
-        header{
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: "Times New Roman", Times, serif;
+        }
+        header {
             width: 97.3%;
             padding: 20px;
             display: flex;
@@ -13,12 +18,19 @@
             font-size: 24px;
             border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
         nav a {
-            margin: 30px;
+            margin: 10px 40px; 
             text-decoration: none;
             color: #000000;
+            display: flex;
+            align-items: center;
         }
-        nav a span{
+        nav a span {
             position: relative;
             top: -1px;
         }
@@ -27,10 +39,11 @@
             cursor: pointer; 
             margin-right: 10px;
         }
-        .post-item{
+        .post-item {
             margin-top: 50px;
-            margin-left: 310px;
-            width: 900px;
+            margin-left: 20%;
+            width: 80%;
+            max-width: 900px;
             font-family: "Times New Roman", Times, serif;
             margin-bottom: 20px;
             cursor: pointer;
@@ -38,15 +51,15 @@
             padding: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        .post-title{
+        .post-title {
             font-size: 32px;
         }
-        .post-author-date{
+        .post-author-date {
             font-size: 24px;
             color: #666;
             margin-top: 5px;
         }
-        .post-item:hover{
+        .post-item:hover {
             background-color: #f0f0f0;
         }
         input {
@@ -54,7 +67,7 @@
             outline: none; 
             font-family: "Times New Roman", Times, serif;
             font-size: 24px;
-            width: 850px;
+            width: 70%;
             border-bottom: 1px solid rgba(132, 132, 132, 0.5);
             padding: 10px; 
         }
@@ -63,13 +76,35 @@
             padding: 0;
         }
         .search-container{
-            margin-left: 310px;
+            margin-left: 20%;
+            width: 80%;
         }
         .search-container img{
             position: relative;
             top: 3px;
         }
-    </style>
+        @media (max-width: 600px) {
+            header {
+                font-size: 20px;
+            }
+            nav a {
+                margin: 5px 20px;
+            }
+            .post-title {
+                font-size: 24px;
+            }
+            .post-author-date {
+                font-size: 18px;
+            }
+            .post-item {
+                width: 90%;
+                margin-left: 5%;
+            }
+            input {
+                font-size: 20px;
+            }
+        }
+    </style>    
 </head>
 <body>
     <header>
