--- a/CreatePost.html
+++ b/CreatePost.html
@@ -64,6 +64,7 @@
             font-family: "Times New Roman", Times, serif;
             margin-top: 42px;
             margin-bottom: 15px;
+            margin-left: 20%;
             width: 10%;
             max-width: 900px;
             background-color: white;
@@ -81,12 +82,7 @@
             font-family: "Times New Roman", Times, serif;
             font-size: 24px;
             color: rgb(0, 0, 0);
-            margin-top: 45px;
-            margin-left: 20px;
-        }
-        .button-container {
             margin-left: 20%;
-            display: flex;
         }
         @media (max-width: 600px) {
             header {
@@ -117,11 +113,9 @@
     <form id='form' autocomplete="off" onsubmit="CreatePost(event)">
         <input type="text" id="title" placeholder="Paper Title" autocomplete="off" required>
         <textarea id="body" placeholder="Start typing your paper here..." required></textarea>
-        <div class = "button-container">
-            <button id='button' type="submit">Post</button>
-            <p id="error"></p>
-        </div>
+        <button id='button' type="submit">Post</button>
     </form>
+    <p id="error"></p>
     <div style="margin: 50px;"></div>
     <script>
         const errortext = document.getElementById('error');
