--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="ND_nCDVjKtvjF2fPbUbbb4IJImaT3dcLvvCr2yiikDw" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464043514052770"
      crossorigin="anonymous"></script>
     <title>About</title>
