--- a/Post.html
+++ b/Post.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464043514052770"
-     crossorigin="anonymous"></script>
     <title>Post</title>
+    <link rel="icon" href="AB.png" type="image/png">
     <style>
         body, html {
             margin: 0;
@@ -103,9 +102,8 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="index.html"><img src= "View.png" loading="lazy"><span>View</span></a>
             <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
-            <a href="ViewPost.html"><img src = "View.png" loading="lazy"><span>View</span></a>
             <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
