--- a/CreatePost.html
+++ b/CreatePost.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464043514052770"
-     crossorigin="anonymous"></script>
     <title>Create</title>
+    <link rel="icon" href="AB.png" type="image/png">
     <style>
         body, html {
             margin: 0;
@@ -105,10 +104,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="index.html"><img src= "View.png" loading="lazy"><span>View</span></a>
             <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
-            <a href="ViewPost.html"><img src="View.png" loading="lazy"><span>View</span></a>
-            <a href="Account.html"><img src="Account.png" loading="lazy"><span>Account</span></a>
+            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
     <div style="margin: 100px;"></div>
