--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="ND_nCDVjKtvjF2fPbUbbb4IJImaT3dcLvvCr2yiikDw" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464043514052770"
-     crossorigin="anonymous"></script>
-    <title>About</title>
+    <title>Post List</title>
+    <link rel="icon" href="AB.png" type="image/png">
     <style>
         body, html {
             margin: 0;
@@ -27,7 +25,7 @@
             justify-content: center;
         }
         nav a {
-            margin: 10px 40px;
+            margin: 10px 40px; 
             text-decoration: none;
             color: #000000;
             display: flex;
@@ -42,25 +40,49 @@
             cursor: pointer; 
             margin-right: 10px;
         }
-        #about {
-            margin: 0 auto;
-            padding: 20px;
-            width: 90%;
-            max-width: 900px;
-        }
-        #Title {
+        .post-item {
             margin-top: 50px;
+            margin-left: 20%;
+            width: 80%;
+            max-width: 900px;
+            font-family: "Times New Roman", Times, serif;
+            margin-bottom: 20px;
+            cursor: pointer;
+            padding-bottom: 10px;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .post-title {
             font-size: 32px;
         }
-        #Body {
+        .post-author-date {
             font-size: 24px;
+            color: #666;
+            margin-top: 5px;
         }
-        #howto {
-            margin-top: 20px;
-            width: 100%;
-            height: auto;
-            max-width: 900px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        .post-item:hover {
+            background-color: #f0f0f0;
+        }
+        input {
+            border: none;
+            outline: none; 
+            font-family: "Times New Roman", Times, serif;
+            font-size: 24px;
+            width: 70%;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
+            padding: 10px; 
+        }
+        body, html {
+            margin: 0;
+            padding: 0;
+        }
+        .search-container{
+            margin-left: 20%;
+            width: 80%;
+        }
+        .search-container img{
+            position: relative;
+            top: 3px;
         }
         @media (max-width: 600px) {
             header {
@@ -69,45 +91,78 @@
             nav a {
                 margin: 5px 20px;
             }
-            #Title {
-                font-size: 28px;
+            .post-title {
+                font-size: 24px;
             }
-            #Body {
+            .post-author-date {
                 font-size: 18px;
             }
+            .post-item {
+                width: 90%;
+                margin-left: 5%;
+            }
+            input {
+                font-size: 20px;
+            }
         }
-    </style>
+    </style>    
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="index.html"><img src= "View.png" loading="lazy"><span>View</span></a>
             <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
-            <a href="ViewPost.html"><img src="View.png" loading="lazy"><span>View</span></a>
-            <a href="Account.html"><img src="Account.png" loading="lazy"><span>Account</span></a>
+            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
-    <div style="margin: 40px;"></div>
-    <div id="about">
-        <p id="Title">About AnimeBlog</p>
-        <p id="Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.
-            This site is a work in progress. If you have any suggestions or come across any bugs please 
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contactanimeblog@gmail.com" target="_blank">send me an email.</a></p>
-        <p id="Title">How to use AnimeBlog</p>
-        <img id="howto" src="HowTo1.png" alt="How to use AnimeBlog step 1">
-        <p id="Body">By clicking the Account tab, you can either make a new account by entering an unregistered username and making a password
-            or log in to an existing one by entering a registered username and it's associated password.</p>
-        <img id="howto" src="HowTo2.png" alt="How to use AnimeBlog step 2">
-        <p id="Body">By clicking the Create tab once the Account tab shows you have logged in, you can make a post by typing out a title and a body.
-            Once the post is finished, you'll automatically navigate tab where you can view your post by clicking the item with its information as well 
-            as posts others have made. You can also delete posts you have made back in the Account tab by pressing the trash button.</p>
-        <img id="howto" src="HowTo3.png" alt="How to use AnimeBlog step 3">
-        <p id="Body">While viewing a post, you can either download it as a multi-page PDF by clicking the download button or read it online.
-            You can also generate a MLA citation by clicking the cite paper button.</p>
-        <p id="Title">What to Post</p>
-        <p id="Body">Only post formal literary analyses on anime, manga, lns or vns. Don't post plagiarized content. 
-            Anything posted in violation of these rules is subject to deletion at my discretion.</p>
+    <div style = "margin: 100px;"></div>
+    <div class="search-container">
+        <img src="Search.png" loading = "lazy">
+        <input type="text" id="searchBar" placeholder="Search posts..." oninput="filterPosts()">
     </div>
-    <div style="margin: 100px;"></div>
+    <div id="postList"></div>
+    <div style = "margin: 100px;"></div>
+    <script>
+        async function fetchPosts() {
+            const response = await fetch('https://tom4znmjdf.execute-api.us-west-1.amazonaws.com/GetPostList');
+            const posts = await response.json();
+            const postList = document.getElementById('postList');
+            postList.innerHTML = ''; 
+            posts.forEach(post => {
+                const postItem = document.createElement('div');
+                postItem.className = 'post-item';
+                postItem.dataset.title = post.Title.toLowerCase();
+                postItem.dataset.author = post.Author.toLowerCase();
+                postItem.dataset.date = post.Date.toLowerCase();
+                const postTitle = document.createElement('div');
+                postTitle.className = 'post-title';
+                postTitle.textContent = post.Title;
+                const postInfo = document.createElement('div');
+                postInfo.className = 'post-author-date';
+                postInfo.textContent = `${post.Author} ${post.Date}`;
+                postItem.appendChild(postTitle);
+                postItem.appendChild(postInfo);
+                postItem.onclick = () => {
+                    window.location.href = `Post.html?title=${encodeURIComponent(post.Title)}`;
+                };
+                postList.appendChild(postItem);
+            });
+        }
+        function filterPosts() {
+            const searchTerm = document.getElementById('searchBar').value.toLowerCase();
+            const posts = document.querySelectorAll('.post-item');
+            posts.forEach(post => {
+                const title = post.dataset.title;
+                const author = post.dataset.author;
+                const date = post.dataset.date;
+                if (title.includes(searchTerm) || author.includes(searchTerm) || date.includes(searchTerm)) {
+                    post.style.display = '';
+                } else {
+                    post.style.display = 'none';
+                }
+            });
+        }
+        fetchPosts();
+    </script>
 </body>
 </html>
